<?xml version="1.0" encoding="utf-8"?>


<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95efff"
    android:id="@+id/dd">

    <TextView
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/jobname"
        android:id="@+id/textView" android:layout_x="122dp" android:layout_y="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vehicle"
        android:id="@+id/textView2" android:layout_x="127dp" android:layout_y="87dp"/>
    <TextView
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Price"
        android:id="@+id/textView3" android:layout_x="131dp" android:layout_y="163dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/JodDuration"
        android:id="@+id/textView4" android:layout_x="112dp" android:layout_y="245dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave" android:layout_x="25dp" android:layout_y="361dp"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnReset" android:layout_x="261dp" android:layout_y="368dp"/>
    <EditText
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtJob" android:layout_x="59dp" android:layout_y="37dp"/>
    <EditText
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtVehicle" android:layout_x="59dp" android:layout_y="112dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txt" android:layout_x="59dp" android:layout_y="274dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/bBack" android:layout_x="141dp" android:layout_y="364dp"/>
    <EditText
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtPrice" android:layout_x="68dp" android:layout_y="186dp"/>
</AbsoluteLayout>