

<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95efff">

    <TextView
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/customerName"
        android:id="@+id/textView" android:layout_x="122dp" android:layout_y="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/customerLast"
        android:id="@+id/textView2" android:layout_x="127dp" android:layout_y="87dp"/>
    <TextView
        android:layout_width="119dp"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cellNumber"
        android:id="@+id/textView3" android:layout_x="99dp" android:layout_y="166dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/textView4" android:layout_x="112dp" android:layout_y="245dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/address"
        android:id="@+id/textView5" android:layout_x="99dp" android:layout_y="329dp"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave" android:layout_x="36dp" android:layout_y="441dp"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnReset" android:layout_x="247dp" android:layout_y="441dp"/>
    <EditText
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtName" android:layout_x="59dp" android:layout_y="37dp"
        android:inputType="text" />
    <EditText
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtSurname" android:layout_x="59dp" android:layout_y="112dp"
        android:inputType="text" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtCell" android:layout_x="59dp" android:layout_y="274dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtAddress" android:layout_x="59dp" android:layout_y="361dp"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/bBack" android:layout_x="144dp" android:layout_y="438dp"/>
    <EditText
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail" android:layout_x="68dp" android:layout_y="186dp"
        android:inputType="text" />
</AbsoluteLayout>