<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8b8682">

    <TextView
        android:layout_width="214dp"
        android:layout_height="56dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:text="@string/quotes"
        android:id="@+id/textView" android:layout_x="58dp" android:layout_y="36dp"/>
    <Button
        android:layout_width="197dp"
        android:layout_height="73dp"
        android:text="@string/mquote"
        android:id="@+id/btnAddQuote" android:layout_x="73dp" android:layout_y="154dp"/>

    <Button
        android:layout_width="197dp"
        android:layout_height="73dp"
        android:text="@string/Vqoutes"
        android:id="@+id/btnViewQuote" android:layout_x="65dp" android:layout_y="274dp"/>

</AbsoluteLayout>